fix sidebar and aside spacing and responsive layout

--- a/front/styles/appDemo/app-dashboard.less
+++ b/front/styles/appDemo/app-dashboard.less
@@ -2,14 +2,19 @@
  * Dashboard styles
  * ======================================================================== */
 
-.aside {
-    border-left: none;
+.aside {        
+    border-left: 1px solid #DDD;
     border-top: 1px solid #DDD;
     display: block;
     float: left;
     width: 100%;
+    &.collections {
+        border-left: none;        
+         @media (min-width: 1024px) {
+            border-left: 1px solid #DDD;
+        }
+    }
     @media (min-width: 1024px) {
-        border-left: 1px solid #DDD;
         border-top: none;
         display: table-cell;
         float: none;
